Adjust the log4j versions used to fix the travis build.

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
       <pax.exam.version>4.13.1</pax.exam.version>
       <pax.url.version>2.5.4</pax.url.version>
       <postgresql.version>42.2.20</postgresql.version>
-      <log4j.version>[2.17.1,)</log4j.version>
+      <log4j.version>[2.17.1,3.0.0-SNAPSHOT)</log4j.version>
       <slf4j.version>1.7.30</slf4j.version>
       <commons.csv.version>1.5</commons.csv.version>
       <h2.version>[2.0.206,)</h2.version>
